# WAE

./: .gitignore  Cargo.toml  LICENSE  README.md  copilot.json
config/: block.json  debugger_config.json  demo.json  doctor.json  enemy.json  hostile.json  map.json  map_test.json  operator.json  skill.json  skill_test.json  visualizer_config.json
data/: key_count.py
example/: Makefile  ffi.c  ffi.ipynb  ffi.py
gym_api/gym_api/: env.py
src/: api.rs  calculator.rs  demo.rs  enity.rs  frame.rs  frame_impl.rs  lib.rs  main.rs  map.rs  route.rs  scope.rs  spawner.rs  test.rs
src/block/: blockinfo.rs  mod.rs  placeinfo.rs
src/config/: mod.rs
src/event/: doctor.rs  hostile.rs  mod.rs
src/frame/: mod.rs  timer.rs
src/map/: block.rs  mod.rs  test.rs  tile.rs
src/skill/: effect.rs  mod.rs
src/timeline/: doctor.rs  hostile.rs  mod.rs
src/unit/: bullet.rs  code.rs  damage.rs  enemy.rs  marco.rs  mod.rs  operator.rs  operator_mission.rs  scope.rs
src/unit/enemy/: enemy_mission.rs  mod.rs  test.rs
src/unit/operator/: mod.rs  operator_mission.rs  test.rs
src/unit/skill/: effect.rs  mod.rs  skill_fn.rs  skill_schedule.rs  skill_type.rs
src/utils/: config.rs  configloader.rs  copilot.rs  data_loder.rs  debugger.rs  error.rs  math.rs  mod.rs  render.rs  render_config.rs  visualizer.rs  visualizer_config.rs
src/utils/data_loader/: enemy_loader.rs  (+5 more)
think/: READMD.md  bec.md  伤害.md  地图.md  坐标系.md  如何抛弃单位.md  引用重定向问题.md  技能.canvas  技能.md  技能控制.md  攻击范围的旋转.md  攻击范围索敌.md  未命名.canvas  流程.canvas  流程控制.md  碰撞的判定.md  程序结构的引用关系.canvas  索敌.md  速度过快导致振荡和撞墙.md  阻挡.md
(+3 files in other folders)
