[package]
name = "wae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive","rc"] }
log = "0.4"
env_logger = "0.10.0"
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = {version="0.26.2",features = ["all_loaders"]}
tiny-skia = "0.11.4"
lazy_static = "1.4.0"

[lib]
crate-type=["cdylib"]

[[bin]]
name="wae"
