[package]
name = "wae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive","rc"] }
log = "0.4"
env_logger = "0.10.0"
eframe = "0.28.0"
egui = "0.28.0"
egui_extras = {version="0.28.0",features = ["all_loaders"]}
tiny-skia = "0.11.4"
lazy_static = "1.4.0"
image = "0.25.1"
rand = "0.8.5"
serde_path_to_error = "0.1.16"

[lib]
name="wae"
crate-type=["cdylib"]

[[bin]]
name="wae_debuger"
path="src/main.rs"
